Add proper navigation bar for image carousel
Move the carousel indicator into an overlay OSD toolbar, and add
navigation buttons.

Add arrow key and page key shortcuts to go to the previous/next image.

Make the navbar appear automatically when these shortcuts are used, or
when the pointer moves in the window. Hide the navbar automatically
after a three seconds, or when the pointer leaves the window.

While adding the navbar, also move outer margins to the main window, for
consistency.

Closes GH-18

--- a/resources/gtk/help-overlay.ui
+++ b/resources/gtk/help-overlay.ui
@@ -63,6 +63,35 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
             </child>
           </object>
         </child>
+        <child>
+          <object class="GtkShortcutsGroup">
+            <property name="title" translatable="yes" context="shortcuts group title">Navigate images</property>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Previous image</property>
+                <property name="accelerator">Left</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Previous image</property>
+                <property name="accelerator">Page_Up</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Next image</property>
+                <property name="accelerator">Right</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Next image</property>
+                <property name="accelerator">Page_Down</property>
+              </object>
+            </child>
+          </object>
+        </child>
       </object>
     </child>
   </object>
